alignment issue with shareable features

--- a/application/clients/desktopV2/src/app/project-component/project-component.component.scss
+++ b/application/clients/desktopV2/src/app/project-component/project-component.component.scss
@@ -19,12 +19,24 @@
     font-weight: 500;
     font-size: 20px;
 }
-
+.m-4{
+    margin: 1.5rem!important;
+}
+.p-4 {
+    padding: 0.4rem !important;
+    
+  }
+//   .mx-5 {
+    // padding: 0 1.75em 0 0;
+    // margin-right: -36rem!important;
+    // padding: 1px 0.75em 0 0;
+// }
 #ih {
     white-space: nowrap;
     color: #5DB18C;
     border-color: #5DB18C;
     padding: 8px 20px 8px 20px;
+    margin: 0 0 0 40px;
     font-family: Montserrat, sans-serif;
     font-weight: 500;
     font-size: 20px;
@@ -33,6 +45,11 @@
 #po {
     cursor: pointer;
     border-radius: 25px;
+    display: flex;
+    justify-content: center;
+    flex: 1 1 auto;
+    padding: 1rem 1rem;
+    
 }
 
 #op {
@@ -118,7 +135,7 @@
     width: 100%;
     font-family: Montserrat, sans-serif;
     font-weight: 500;
-    font-size: 18px;
+    font-size: 16px;
     color: #404040;
     padding: 0 0 0 10px;
     margin: 5px 0 0 0;
@@ -140,7 +157,8 @@
     width: 100%;
     font-family: Montserrat, sans-serif;
     color: #302C5E;
-    font-size: 27px;
+    font-size: 21px;
+    font-weight: bold;
     padding: 0 0 0 10px;
 }
 
